# todo-app-fastapi-python

./: .env.example  README.md  pyproject.toml
app/: __init__.py  auth.py  database.py  enums.py  load_env.py  main.py
app/alembic/: env.py
app/alembic/versions/: 001_create_tables_and_sample_data.py
app/models/: models.py
app/routers/: __init__.py  auth.py  companies.py  tasks.py  users.py
app/schemas/: __init__.py  company.py  task.py  user.py
